<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:scrollbarFadeDuration="0"
    android:scrollbarStyle="outsideOverlay"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:scrollbarSize="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/MeterToKmBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:onClick="onClickMeterToKm"
                android:text="@string/m_to_km"
                android:textSize="20sp" />

            <Button
                android:id="@+id/InchToMeterBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:onClick="onClickInchToMeter"
                android:text="@string/inch_to_m"
                android:textSize="20sp" />

            <Button
                android:id="@+id/HourToMinBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:onClick="onClickHourToMin"
                android:text="@string/hour_to_min"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:onClick="onClickCmToMeter"
                android:text="@string/cm_to_m"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:onClick="onClickMinToSec"
                android:text="@string/min_to_sec"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:onClick="onClickSecToMillisec"
                android:text="@string/sec_to_ms"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="403dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ValueEntry1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="value 1"
                android:ems="10"
                android:hint="@string/cm_default"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true" />

            <TextView
                android:id="@+id/ValueLabel1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cm_default"
                android:textSize="24sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bidirectional_vertical"
            android:textAlignment="center"
            android:textSize="34sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ValueEntry2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="value 2"
                android:ems="10"
                android:hint="@string/m_default"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true" />

            <TextView
                android:id="@+id/ValueLabel2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m_default"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>